...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="new_discussion"
            android:text="New Discussion" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/discussion_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true" />

    </LinearLayout>

...
