...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topic_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:isScrollContainer="true" />
    </LinearLayout>
...
